--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -1,3 +1,11 @@
+:root{
+  --primary: #e81b23; 
+  --secondary: #32c2e6; 
+  --tertiary: #ffd200; 
+  --accent: #111111; 
+  --background: #ffedbe;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
