Added navbar and improved theme selection

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -62,3 +62,20 @@ code {
 .clickable:hover {
   cursor: pointer;
 }
+
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: none;
+  background-color: #333;
+  text-align: left;
+}
+
+.navbar_item {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
