--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -6,6 +6,10 @@
   --background: #ffedbe;
 }
 
+html, body, #root, #app, #app>div {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
