--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -33,13 +33,13 @@ code {
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 35vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App-logo-spin {
+    animation: App-logo-spin infinite 1s linear;
   }
 }
 
@@ -77,7 +77,11 @@ code {
   padding: 0;
   overflow: none;
   background-color: #333;
-  text-align: left;
+  text-align: center;
+}
+
+.App-logo-navbar {
+  height: 30px;
 }
 
 .navbar_item {
@@ -85,15 +89,103 @@ code {
   display: inline-block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 11px 120px;
   text-decoration: none;
   transition: 0.1s ease-in-out;
+  font-size: 30px;
 }
 
 .navbar_item:hover {
   cursor: pointer;
   background-color: var(--hover-light);
 }
+
+.discoverScreen {
+  text-align: center;
+}
+
+.discoverSearch {
+  margin-top: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  font-size: 32px;
+}
+
+.scrollDownButton {
+  position: relative;
+  top: 700px;
+  padding-right: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 200px;
+  font-size: 28px;
+  border-style: solid;
+  border-color: black;
+  background-color: #dddddd;
+}
+
+.scrollDownButton:hover {
+  background-color: #999999;
+  box-shadow: 5px 5px 5px #aaaaaa;
+}
+
+.generateScreenTitleText {
+  margin-top: 10px;
+  font-size: 72px;
+  font-weight: bolder;
+  text-align: center;
+  color: #777777;
+  text-shadow: 5px 5px 0px #00ffff;
+}
+
+.generateScreenModules {
+  vertical-align: top;
+  display: inline-block;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 190px;
+}
+
+.generateScreenText {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.generateScreenBox {
+  border-style: solid;
+  border-radius: 2px;
+  border-color: #555555;
+  background-color: white;
+  width: 550px;
+  display: inline-block;
+  margin-left: 0px;
+  margin-top: -20px;
+}
+
+.generateButton {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 28px;
+  border-radius: 1px;
+  border-style: solid;
+  border-color: black;
+  background-color: #dddddd;
+}
+
+.generateButton:hover {
+  background-color: #bbbbbb;
+  box-shadow: 3px 3px 5px #aaaaaa;
+}
+
+#gsbLeft { height: 550px; }
+
+#gsbRight { height: 350px; }
+
+#gsbBottom { height: 100px; }
+
 /* -------------- wave effect taken from https://codeconvey.com/ripple-effect-on-button-click-css ------------- */
 
 @-webkit-keyframes ripple {
