--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -304,10 +304,14 @@ code {
 .playlistScreen_container {
   columns: 2 auto;
 }
-
+.playlistColumn {
+  display: flex;
+  flex-direction: row;
+}
+/* 
 .playlistRow {
   
-}
+} */
 
 .playlistInfo {
   display: inline-block;
@@ -321,7 +325,12 @@ code {
 
 .playlist_description {
   display: inline-block;
-  position: relative;
+  /* position: relative; */
+}
+
+.playlist {
+  display: flex;
+  flex-direction: row
 }
 
 /* ANIMATIONS */
