--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -38,21 +38,28 @@ code {
   text-align: center;
 }
 
+.app_logo_container {
+  padding-top: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .appLogoBG {
   position: relative;
-  height: 35vmin;
-  top: -67px;
+  /* height: 35vmin;
+  top: -67px; */
   pointer-events: none;
   animation: appLogoWave 2.5s linear;
   animation-iteration-count: 1;
 }
 
 .appLogoFG {
-  transform: scale(0.45);
+  /* transform: scale(0.45); */
   position: absolute;
-  height: 35vmin;
+  /* height: 35vmin;
   top: 195px;
-  left: 23px;
+  left: 23px; */
 }
 
 .appLogoFG:hover {
@@ -70,7 +77,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
