--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -39,7 +39,7 @@ code {
 }
 
 .app_logo_container {
-  padding-top: 10%;
+  padding-top: 3%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,23 +47,16 @@ code {
 
 .appLogoBG {
   position: relative;
-  /* height: 35vmin;
-  top: -67px; */
   pointer-events: none;
-  animation: appLogoWave 2.5s linear;
+  animation: appLogoWaveIntro 2.5s linear;
   animation-iteration-count: 1;
 }
 
 .appLogoFG {
-  /* transform: scale(0.45); */
   position: absolute;
-  /* height: 35vmin;
-  top: 195px;
-  left: 23px; */
-}
-
-.appLogoFG:hover {
-  filter: hue-rotate(50deg);
+  margin-top: -0.5%;
+  transform: scale(0.98);
+  filter: hue-rotate(180deg);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -77,7 +70,6 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -86,22 +78,42 @@ code {
   color: #61dafb;
 }
 
-.splashText {
-  font-weight: bold;
-  color: black;
-  background-color: var(--button-transparent);
-  text-align: center;
-  padding: 11px 120px;
-  margin: 0 -120px;
-  margin-top: 1%;
-  text-decoration: none;
-  transition: 0.1s ease-in-out;
-  font-size: 30px;
+.splashLoginContainer {
+  padding: 1%;
+  margin-top: 2%;
+  border-radius: 4%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.splashText:hover {
+.splashInputContainer {
+  padding-top: 3%;
+}
+
+.splashInput {
+  font-size: 18px;
+}
+
+.splashText {
+  font-weight: bolder;
+  text-align: center;
+  margin: 5%;
+  text-decoration: none;
+  transition: 0.1s ease-in-out;
+}
+
+.splashTextSmall {
+  font-size: 16px;
+  margin: 5%;
+  text-decoration: underline;
+  color: black;
+}
+
+.splashTextSmall:hover {
+  color: white;
   cursor: pointer;
-  background-color: var(--hover-light);
 }
 
 .splashTestSelect {
@@ -156,33 +168,39 @@ code {
 /* DISCOVER SCREEN */
 .discoverScreen {
   text-align: center;
+  overflow: hidden;
+}
+
+.searchContainer {
+  margin: 1%;
 }
 
 .discoverSearch {
-  margin-top: 25px;
-  padding-top: 4px;
-  padding-bottom: 7px;
   text-align: center;
-  font-size: 28px;
+  font-size: 20px;
 }
 
 .discoverSearchButton {
   margin-bottom: 24px;
 }
 
-.scrollDownButtonContainer {
-  width: 600px;
-  margin: auto;
+.playlistDiscover {
+  display: flex;
+  margin-top: 1%;
+  margin-left: 12%;
 }
 
-.scrollDownButton {
-  position: relative;
-  top: 700px;
-  padding-right: 200px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 200px;
-  font-size: 28px;
+.discoverPlaylistGrid {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.scrollDownButtonContainer {
+  position: absolute;
+  display: none;
+
+  width: 600px;
+  filter: drop-shadow(3px 3px 6px #333333);
 }
 
 /* GENERATE SCREEN */
@@ -350,7 +368,7 @@ code {
   }
 }
 
-@keyframes appLogoWave {
+@keyframes appLogoWaveIntro {
   0% {
     transform: scaleY(0.1);
   }
