--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -86,6 +86,7 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  filter: drop-shadow(7px 7px 2px #222222);
 }
 
 .splashInputContainer {
@@ -209,9 +210,7 @@ code {
   margin-bottom: 40px;
   font-size: 72px;
   font-weight: bolder;
-  text-align: center;
-  color: #777777;
-  text-shadow: 5px 5px 0px #00ffff;
+  text-align: center;;
 }
 
 .generateScreenModules {
