--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -136,7 +136,7 @@ code {
   margin: 0;
   padding: 0;
   height: 6.5%;
-  background-color: #333;
+  background-color: #333333;
   text-align: center;
 }
 
@@ -333,7 +333,7 @@ code {
   margin-top: 1.5%;
 }
 
-/* Playlists Screen */
+/* PLAYLISTS SCREEN */
 .playlistScreen_container {
   columns: 2 auto;
 }
@@ -341,10 +341,6 @@ code {
   display: flex;
   flex-direction: row;
 }
-/* 
-.playlistRow {
-  
-} */
 
 .playlistInfo {
   display: inline-block;
@@ -358,12 +354,95 @@ code {
 
 .playlist_description {
   display: inline-block;
-  /* position: relative; */
 }
 
 .playlist {
   display: flex;
   flex-direction: row
+}
+
+/* PROFILE SCREEN */
+.profileScreen {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+.profileScreenOptions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 20%;
+}
+
+.profileScreenLeftContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 12%;
+  width: 80%;
+  height: 80%;
+  margin-left: 10%;
+  filter: drop-shadow(5px 0px 0px #333333);
+}
+
+.profileOptionsText {
+  font-size: 32px;
+  text-align: right;
+  margin-top: 40%;
+  margin-right: 0%;
+}
+
+.profileOptionsText:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 6px #555555);
+}
+
+.profileOptionsButton {
+  display: flex;
+  justify-content: center;
+  margin-left: 20%;
+  margin-top: 40%;
+}
+
+.profileScreenMainContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  padding: 3%;
+  padding-right: 12%;
+}
+
+.profileScreenSubText {
+  font-weight: bold;
+  margin-top: 5%;
+  font-size: 18px;
+}
+
+.profileTextArea {
+  resize: none !important;
+}
+
+.profileInputContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.profileInput {
+  width: 70%;
+}
+
+.profileAccountSubText {
+  margin-left: 3%;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.profileAccountSubText:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 /* ANIMATIONS */
