--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -117,6 +117,7 @@ code {
   cursor: pointer;
 }
 
+
 .splashTestSelect {
   color: black;
   position: absolute;
@@ -334,8 +335,25 @@ code {
 }
 
 /* PLAYLISTS SCREEN */
-.playlistScreen_container {
-  columns: 2 auto;
+
+.playlist_container {
+  margin: 2.5%;
+  margin-left: 15%;
+  margin-right: 5%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 75%;
+}
+
+.playlist:hover {
+  cursor: pointer;
+  /* filter: drop-shadow(0px 0px 6px #555555); */
+  background-color: grey;
+}
+
+.playlist_row {
+  align-content: center;
+  padding: 40px;
 }
 .playlistColumn {
   display: flex;
@@ -354,11 +372,17 @@ code {
 
 .playlist_description {
   display: inline-block;
+  align-content: center;
+  justify-content: center;
 }
 
 .playlist {
   display: flex;
-  flex-direction: row
+  flex-direction: row;
+  border: solid black;
+  width: 90%;
+  border-radius: 5px;
+
 }
 
 /* PROFILE SCREEN */
