Better formatting in Friends tab.

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -504,6 +504,11 @@ code {
   margin-left: 4%;
 }
 
+.profileFriendInfo {
+  width: 60%;
+  overflow-wrap: break-word;
+}
+
 /* ANIMATIONS */
 @keyframes App-logo-spin {
   from {
