--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -243,6 +243,7 @@ code {
   margin: 0 auto;
   overflow-y: scroll;
   overflow-x: hidden;
+  user-select: none;
 }
 
 /* GENERATE SCREEN */
@@ -379,21 +380,39 @@ code {
   margin-top: 1.5%;
 }
 
-/* PLAYLISTS SCREEN */
+.genreButton {
+  margin: 2%;
+}
 
-.playlist_container {
-  margin: 2.5%;
-  margin-left: 15%;
-  margin-right: 5%;
+/* PLAYLISTS SCREEN */
+.playlistScreen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   overflow-y: auto;
   overflow-x: hidden;
-  width: 75%;
+}
+
+.playlist_container {
+  margin-top: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  user-select: none;
 }
 
 .playlist:hover {
   cursor: pointer;
-  /* filter: drop-shadow(0px 0px 6px #555555); */
-  background-color: grey;
+  background-color: #999999;
+}
+
+.playlist:active {
+  cursor: pointer;
+  background-color: #666666;
 }
 
 .playlist_row {
@@ -427,7 +446,17 @@ code {
   border: #333333;
   width: 90%;
   border-radius: 5px;
+}
 
+.playlistSearchContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 1%;
+}
+
+.playlistSearch {
+  text-align: center;
+  font-size: 20px;
 }
 
 /* PROFILE SCREEN */
@@ -453,6 +482,7 @@ code {
   width: 80%;
   height: 80%;
   margin-left: 10%;
+  user-select: none;
   filter: drop-shadow(5px 0px 0px #333333);
 }
 
