--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -390,15 +390,14 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
-  overflow-x: hidden;
+  height: 100%;
 }
 
 .playlists_container {
   margin-top: 2%;
   padding-left: 2%;
   padding-right: 2%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   width: 100%;
   height: 100%;
@@ -444,7 +443,6 @@ code {
   display: flex;
   flex-direction: row;
   border: #333333;
-  width: 90%;
   border-radius: 5px;
 }
 
@@ -513,7 +511,7 @@ code {
   padding-right: 12%;
 }
 
-.profileScreenMainContainerFriends {
+.profileScreenMainContainerFollowing {
   display: flex;
   flex-direction: column;
   width: 80%;
@@ -522,7 +520,7 @@ code {
   padding-right: 12%;
 }
 
-.friendSearchContainer {
+.followingSearchContainer {
   margin: auto;
 }
 
@@ -560,22 +558,25 @@ code {
 .profileScreenScrollContainer {
   height: 90%;
   margin: 0 auto;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
-.profileScreenFriend {
+.profileScreenFollowing {
   color: black;
   display: flex;
   margin-top: 1%;
   margin-left: 4%;
+  width: 95%;
 }
 
-.profileScreenFriend:hover {
+.profileScreenFollowing:hover {
+  box-shadow: 5px 7px 0px var(--accent);
   cursor: pointer;
-  background-color: #999999;
+  background-color: var(--secondary);
+  color: black
 }
-.profileFriendInfo {
+.profileFollowingInfo {
   width: 60%;
   overflow-wrap: break-word;
 }
