Small splashscreen styling change, users now store theme data, and login swaps between first two users (for testing purposes)

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -80,12 +80,12 @@ code {
 .splashLoginContainer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .splashTextSubtitle {
-  width: 33%;
+  width: 39%;
   text-align: right;
   margin-right: 3%;
   font-style: italic;
