--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -210,7 +210,7 @@ code {
 
 .navbar_item:hover {
   cursor: pointer;
-  color: black;
+  color: var(--accent);
   background-color: var(--hover-light);
 }
 
@@ -246,9 +246,18 @@ code {
 .discoverPlaylistGrid {
   height: 90%;
   margin: 0 auto;
+  margin-left: 1%;
   overflow-y: scroll;
   overflow-x: hidden;
   user-select: none;
+}
+
+.playlistSubTextDiscover {
+  text-align: left;
+  margin-top: -5%;
+  margin-bottom: 5%;
+  font-size: 16px;
+  color: var(--accent);
 }
 
 /* GENERATE SCREEN */
@@ -268,7 +277,6 @@ code {
   vertical-align: top;
   display: inline-block;
   text-align: left;
-  overflow: hidden;
   margin-top: 1.5%;
   margin-left: 10.15%;
   margin-bottom: 1%;
@@ -276,7 +284,9 @@ code {
   max-height: 53%;
   width: 35%;
   padding: 0.5%;
-  border-style: outset;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #dddddd;
 }
 
 .generateScreenText {
@@ -284,21 +294,31 @@ code {
   font-weight: bold;
 }
 
+.generateScreenBox {
+  overflow-y: hidden;
+  width: 100%;
+}
+
 .generateLeftScroller {
   overflow-y: auto;
-  height: 102%;
+  height: 21vw;
 }
 
 .generateRightScroller {
   overflow-y: auto;
+  background-color: none;
   height: 40vmin;
-  width: 40%;
-  border-style: inset;
+  width: 39%;
+  user-select: none;
+  margin-right: -63%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #cccccc;
 }
 
 #locationText1 {
   float: left;
-  margin-left: 3.5%;
+  margin-left: 4.5%;
 }
 
 #locationText2 {
@@ -307,7 +327,7 @@ code {
 
 #locationText3 {
   float: right;
-  margin-right: 11%;
+  margin-right: 10%;
 }
 
 #gsbRight { 
@@ -450,6 +470,7 @@ code {
   flex-direction: row;
   border: #333333;
   border-radius: 5px;
+  margin-left: 0%;
 }
 
 .playlistsSearchContainer {
@@ -499,7 +520,7 @@ code {
   height: 80%;
   margin-left: 10%;
   user-select: none;
-  filter: drop-shadow(5px 0px 0px #333333);
+  filter: drop-shadow(5px 0px 0px var(--buttonColor));
 }
 
 .profileOptionsText {
@@ -582,61 +603,107 @@ code {
 }
 
 .profileScreenFollowing {
-  color: black;
+  color: var(--accent);
   display: flex;
-  margin-top: 1%;
+  margin-top: 2%;
   margin-left: 4%;
   width: 95%;
+  height: 85%;
 }
 
 .profileScreenFollowing:hover {
-  box-shadow: 5px 7px 0px var(--accent);
   cursor: pointer;
+  border-radius: 5px;
   background-color: var(--secondary);
-  color: black
+  color: var(--accent);
 }
 .profileFollowingInfo {
   width: 60%;
+  margin-left: 2%;
   overflow-wrap: break-word;
 }
 
 /* VIEW PROFILE SCREEN */
 .viewProfileScreenContainer {
   display: flex;
-  flex-direction: column;
-  width: 80%;
-  padding: 3%;
-  padding-right: 12%;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  margin: 2%;
 }
 
 .viewProfileScreenLabel {
   margin-top: 2%;
+  margin-bottom: 4%;
   font-weight: bold;
   font-size: 18px;
+  color: var(--accent);
 }
 
-.profileContainer {
+.viewProfileTextArea {
+  margin-top: -2%;
+  margin-bottom: 14%;
+}
+
+.viewProfilePlaylists {
   display: flex;
   flex-direction: row;
   border: #333333;
-  width: 90%;
   border-radius: 5px;
+  margin-left: 0%;
+  margin-bottom: 10%;
+}
+
+.viewProfilePlaylists:hover {
+  background-color: var(--secondary);
+}
+
+.profileContainerLeft {
+  display: flex;
+  flex-direction: column;
+  height: 71%;
+  width: 25%;
+  margin-right: 1%;
+  background-color: var(--secondary);
+  padding: 1%;
+  filter: drop-shadow(5px 0px 0px var(--accent));
+}
+
+.profileContainerRight {
+  display: flex;
+  flex-direction: column;
+  border: #333333;
+  height: 71%;
+  width: 72%;
+  border-radius: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.profileContainerTop {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 1%;
 }
 
 .profilePicture{
   display: inline-block;
   height: 150px;
   width: 150px;
+  margin-bottom: 3%;
 }
 
-.profileName{
-  display: inline-block;
-  align-content: center;
+.profileName {
+  display: flex;
+  width: 20%;
   justify-content: center;
-  margin: 5%;
+  margin-left: 22%;
+  color: var(--accent);
+  text-align: center;
+  font-style: italic;
 }
 
-/* Playlist Screen */
+/* PLAYLIST SCREEN */
 .playlistScreen {
   display: flex;
   flex-direction: row;
