--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -707,6 +707,16 @@ code {
   font-style: italic;
 }
 
+.followButtonContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+}
+
+.followButton {
+  width: 50%;
+}
+
 /* PLAYLIST SCREEN */
 .playlistScreen {
   display: flex;
