--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -226,17 +226,25 @@ code {
   overflow: hidden;
 }
 
-.searchContainer {
-  margin: 1%;
+.discoverSearchContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.discoverTitleText {
+  margin-bottom: 1%;
+  font-size: 72px;
+  font-weight: bolder;
+  font-style: italic;
+  user-select: none;
+  color: var(--accent);
+  filter: drop-shadow(3px 3px 0px var(--secondary));
 }
 
 .discoverSearch {
   text-align: center;
   font-size: 20px;
-}
-
-.discoverSearchButton {
-  margin-bottom: 24px;
 }
 
 .playlistDiscover {
@@ -266,6 +274,7 @@ code {
 .generateScreen {
   height: 100%;
 }
+
 .generateScreenTitleText {
   margin-top: 3.5%;
   margin-bottom: 2.5%;
@@ -274,6 +283,8 @@ code {
   text-align: center;
   font-style: italic;
   user-select: none;
+  color: var(--accent);
+  filter: drop-shadow(3px 3px 0px var(--secondary));
 }
 
 .generateScreenModules {
@@ -422,13 +433,10 @@ code {
 .playlistsScreen {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   height: 100%;
 }
 
 .playlists_container {
-  margin-top: 2%;
   padding-left: 2%;
   padding-right: 2%;
   overflow-y: auto;
@@ -487,8 +495,8 @@ code {
 
 .playlistsSearchContainer {
   display: flex;
-  justify-content: center;
-  margin-top: 1%;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .playlistsSearch {
@@ -754,6 +762,11 @@ code {
   user-select: none;
 }
 
+.playlistPlayAllButton {
+  margin: 0 auto;
+  margin-top: 13%;
+}
+
 .playlistArt {
   margin-left: 2%;
   margin-top: 2.5%;
@@ -782,13 +795,14 @@ code {
 }
 
 .playlistGenreLabel {
-  margin-top: 18%;
+  margin-top: 10%;
   font-size: 32px;
   text-align: center;
   margin-bottom: 2%;
 }
 
 .playlistNumSongs {
+  font-size: 18px;
   margin-left: 2%;
   margin-top: -4%;
 }
@@ -836,11 +850,11 @@ code {
   font-style: italic;
 }
 
-.playlistSongTitleLabel { margin-left: 14%;}
+.playlistSongTitleLabel { margin-left: 15%;}
 
 .playlistSongArtistLabel { margin-left: 33%;}
 
-.playlistSongDurationLabel { margin-left: 18%;}
+.playlistSongDurationLabel { margin-left: 21%;}
 
 .playlistSongTitle, .playlistSongDuration, .playlistSongArtist {
   display: flex;
@@ -881,6 +895,7 @@ code {
 .playlistSongBox {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-top: 2%;
   padding-right: 10%;
   padding-left: 10%;
@@ -894,6 +909,15 @@ code {
   width: 100%;
   display: flex;
 }
+
+.songNumber {
+  font-size: 18px;
+  margin: 0 auto;
+  padding-top: 0.25%;
+  padding-right: 0.75%;
+}
+
+
 /* ANIMATIONS */
 @keyframes App-logo-spin {
   from {
