--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -256,9 +256,10 @@ code {
 }
 
 .discoverPlaylistGrid {
-  height: 90%;
+  height: 75.2%;
   margin: 0 auto;
   margin-left: 1%;
+  margin-bottom: 1%;
   overflow-y: scroll;
   overflow-x: hidden;
   user-select: none;
@@ -270,6 +271,40 @@ code {
   margin-bottom: 5%;
   font-size: 16px;
   color: var(--accent);
+}
+
+.discoverBottomContainer {
+  background-color: #333333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 9%;
+}
+
+.discoverFilterContainer {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  width: 17%;
+}
+
+.discoverFilterButton {
+  width: 50%;
+}
+
+.discoverRandomContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 14%;
+}
+
+.discoverFilterText {
+  color: var(--background);
+  font-size: 30px;
+  margin-right: 5%;
+  margin-bottom: 1%;
 }
 
 /* GENERATE SCREEN */
@@ -436,6 +471,16 @@ code {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.createPlaylistButton {
+  width: 32.5%;
+  height: 185%;
+  display: flex;
+  flex-direction: row;
+  border: #333333;
+  border-radius: 5px;
+  margin-left: 0%;
 }
 
 .playlists_container {
