--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -140,6 +140,20 @@ code {
   margin-left: 85%;
 }
 
+.clickButton {
+  color: var(--background) !important;
+  background-color: var(--buttonColor) !important;
+}
+
+.clickButton:hover {
+  background-color: var(--primary) !important;
+}
+
+.clickButton:active {
+  background-color: var(--secondary) !important;
+  color: var(--accent) !important;
+}
+
 .clickable:hover {
   cursor: pointer;
 }
@@ -479,7 +493,7 @@ code {
   height: 100%;
 }
 
-.createPlaylistButton {
+.createPlaylistButtonContainer {
   width: 32.5%;
   height: 105%;
   display: flex;
@@ -487,6 +501,10 @@ code {
   border: #333333;
   border-radius: 5px;
   margin-left: 0%;
+}
+
+.createPlaylistButton:hover {
+  background-color: red;
 }
 
 .playlists_container {
@@ -905,7 +923,6 @@ code {
   border-style: solid;
   border-width: 0.5px;
   border-color: #bbbbbb;
-  background-color: red;
   resize: none !important;
 }
 
