--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -22,7 +22,7 @@ html, body, #root, #app, #app>div {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -611,26 +611,34 @@ code {
   height: 80%;
   margin-left: 10%;
   user-select: none;
-  filter: drop-shadow(5px 0px 0px var(--buttonColor));
+  filter: drop-shadow(0px 0px 4px #333333);
 }
 
 .profileOptionsText {
   font-size: 32px;
-  text-align: right;
-  margin-top: 40%;
-  margin-right: 0%;
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: 20%;
+  margin-right: -17.6%;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  border-style: ridge;
+  border-left: transparent;
+  border-right: transparent;
+  border-color: var(--primary);
 }
 
 .profileOptionsText:hover {
   cursor: pointer;
-  filter: drop-shadow(0px 0px 6px #555555);
+  text-shadow: 0px 0px 10px #555555;
 }
 
 .profileOptionsButton {
   display: flex;
   justify-content: center;
   margin-left: 20%;
-  margin-top: 40%;
+  margin-top: 10%;
+  margin-bottom: 30%;
 }
 
 .myProfileScreen {
