song playing started using spotify web player sdk

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -1148,3 +1148,9 @@ code {
   overflow:hidden;
   visibility: visible;
 }
+
+.stupid_button {
+  background-color: red;
+  outline-style: solid;
+  
+}
