--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -503,10 +503,6 @@ code {
   margin-left: 0%;
 }
 
-.createPlaylistButton:hover {
-  background-color: red;
-}
-
 .playlists_container {
   padding-left: 2%;
   padding-right: 2%;
@@ -902,7 +898,7 @@ code {
 
 .playlistTitleDivider {
   margin-top: -4%;
-  width: 136%;
+  width: 119%;
 }
 
 .playlistGenreLabel {
@@ -1074,23 +1070,15 @@ code {
   width: 96%;
   height: 8%;
   user-select: none;
-}
-
-.spotifyPlayerContainer {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 1%;
 }
 
 .songPlayer {
-  width: 200%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  cursor: pointer;
+  background-color: #333333;
 }
 
 .songPlayerStatusMessage {
@@ -1180,17 +1168,10 @@ code {
   -webkit-animation: ripple 0.5s cubic-bezier(0, 0, 0.2, 1);
           animation: ripple 0.5s cubic-bezier(0, 0, 0.2, 1);
   -webkit-transition: visibility .5s step-end;
-  /* transition: visibility .4s step-end; */
   transition: visibility .5s ease-out;
 }
 
 .ripple:active:before {
   overflow:hidden;
   visibility: visible;
-}
-
-.stupid_button {
-  background-color: red;
-  outline-style: solid;
-  
 }
